# potatis-clicker

./: .gitignore  CMakeLists.txt  Makefile  README  changelog.txt
include/: potatis_clicker.h
include/glad/: glad.h
src/: main.c
src/glad/: glad.c
